# randd

htdocs/: .htaccess  footer.inc  index.php  menu.inc
randd/: Makefile.am  Makefile.cvs  Makefile.in  README  config.h.in  configure.in  conftest  egd.c  egd.h  filein.c  filein.h  input.c  input.h  log.c  log.h  main.c  mkinstalldirs  pipeout.c  pipeout.h  pseudo.c  pseudo.h  queue.c  queue.h  randd.cfg  randtest.c  readconfig.c  readconfig.h  sndnoise.c  sndnoise.h  test.cfg
randd/doc/: config.html  defs.html  egdp.html  index.html  sources.html
