# Configuration for BogoTron
# this program is free software and protected by the GNU GPL version 2 or
# (at your option) any newer, see file COPYING for details
#
# (c) Konrad Rosebaum, 2001


dnl Process this file with autoconf to produce a configure script.
AC_INIT(main.c)
AM_CONFIG_HEADER(config.h)

PACKAGE=randd
VERSION=0.1
AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

AM_INIT_AUTOMAKE("$PACKAGE", "$VERSION")

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP

AC_PROG_INSTALL

AC_PROG_LIBTOOL

dnl Checks for libraries.

dnl Checks for header files.


dnl Checks for typedefs, structures, and compiler characteristics.

dnl Check for Optional libs

dnl Checks for library functions.


AC_OUTPUT(Makefile)

